fixed spacing, issue was div being outside brs

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -127,7 +127,7 @@ body{
   /*background: linear-gradient(to right, rgb(10, 14, 17), rgb(2, 2, 14));*/
   background-color: rgba(8, 11, 15, 0.368);
   /*border: solid 1px rgba(66, 68, 71, 0.253);*/
-  border-radius: 25px;
+  border-radius: 10px;
   /*border: solid 1px rgba(118, 126, 129, 0.74);*/
   /*border-radius: 1%;*/
   margin: 1rem;
